--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- Study Status
 
     <div id="container"></div> -->
-
+      aaaa
     <!-- <resolve>var counter = new Reactive("counter",0);</resolve>
     <reactive @counter></reactive>
     <button onclick="counter.setValue(counter.getValue() + 1)">count</button> -->
